Fix header gap on mobile

--- a/src/main/webapp/style/_common.scss
+++ b/src/main/webapp/style/_common.scss
@@ -6,6 +6,7 @@ a {
   min-height: 50px;
   background-color: #444444;
   display: flex;
+  gap: 10px;
   justify-content: space-between;
   align-items: center;
   grid-template-columns: 1fr 1fr;
